# StratArena_Env

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  README.md  __init__.py  app.py  client.py  evaluate_tasks.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
arena_ui/: dashboard.js  index.html  minimal.css
evaluation/: __init__.py  benchmarks.py  evaluate.py  plots.py
outputs/: mini_stratarena_rollouts.jsonl
outputs/stratarena_grpo/: rng_state.pth  trainer_state.json
outputs/stratarena_sft/: adapter_config.json  scaler.pt  scheduler.pt  trainer_state.json
server/: Dockerfile  __init__.py  app.py  dashboard_api.py  evaluate_tasks.py  requirements.txt  stratarena_environment.py
server/agents/: __init__.py  aggressive.py  conservative.py
server/observation/: __init__.py  builder.py
server/reward/: __init__.py  reward.py
server/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
server/tom/: __init__.py  tom_tracker.py
server/utils/: __init__.py  market.py
training/: StratArena_Training_unsloth.ipynb  __init__.py  data_export.py  inspect_episode.py  llm_utils.py  unsloth_colab_train.py
